cmake_minimum_required(VERSION 3.16.3...3.19.7 FATAL_ERROR)

project(SurfaceToolBox)

#-----------------------------------------------------------------------------
# Extension meta-information
set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extensions/SurfaceToolBox")
set(EXTENSION_CATEGORY "Surface")
set(EXTENSION_CONTRIBUTORS "Zhao Youjun (YJ_personal)")
set(EXTENSION_DESCRIPTION "providing usefull tools to process surface (polydata)")
set(EXTENSION_ICONURL "https://www.example.com/Slicer/Extensions/SurfaceToolBox.png")
set(EXTENSION_SCREENSHOTURLS "https://www.example.com/Slicer/Extensions/SurfaceToolBox/Screenshots/1.png")
set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies

#-----------------------------------------------------------------------------
# Extension dependencies
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})

#-----------------------------------------------------------------------------
# Extension modules
add_subdirectory(HybridRegistration)
## NEXT_MODULE

#-----------------------------------------------------------------------------
include(${Slicer_EXTENSION_GENERATE_CONFIG})
include(${Slicer_EXTENSION_CPACK})
